# scau_cs

./: .gitignore  README.md  test.c
High_Level_Programming/: CMakeLists.txt  README.md  build.bat  main.c
High_Level_Programming/admin/: login.c  login.h
High_Level_Programming/database/: README.md  belong.c  belong.h  link.c  store.c  store.h  tlv.c  tlv.h  user_data.c  user_data.h
High_Level_Programming/interact/: README.md  interact.c  menu.c
High_Level_Programming/menu/: menu.c
High_Level_Programming/system/: system.c  system.h
High_Level_Programming/utils/: crypto.c  crypto.h
TextBook/9/: 18060-删除空格.c  18062-二维数组每行中的最大值.c  18064-链表的有序合并.c
c/: test.c
c/TextBook/4/: 18042 计算分段函数值.c
c/TextBook/5/: 18047-水仙花数.c  18048-自由落体.c  18049-迭代法求平方根.c
c/exp1/: 11126-输出a与b中的较大值.c  print.cpp
c/exp10/: 1092-[填空]函数实现求字符串长度.c  11128-字符串与指针.c
c/exp12/: 1105-[填空]文本文件操作_字符读入.c  1106-文本文件操作_字符写入.c
c/exp2/: 1117-变量定义，按要求完成程序.c
exp11/Class Exercises/: 1104-[填空题]链表的倒序.c
exp11/Homework/: 1098-[填空]链表结点的插入.c  1101-[填空题]链表的排序.c
exp4/class/: 1018-数的排序.c
exp4/homework/: 1008-计算成绩平均分.c  1017-求数的位数.c  1120-判断点是否在圆上.cpp
exp5/class/: 1024-阶乘.c
exp6/Homework/: 1038-打印数字.c
high-level-programming/: CMakeCache.txt  README.md
high-level-programming/admin/: users.c  users.cpp  users.h
high-level-programming/database/: belong.c  belong.h  cos_similar.cpp  cos_similar.h  store.c
high-level-programming/interact/: interact.c  menu.c
high-level-programming/system/: system.c
high-level-programming/utils/: crypto.h
online-judge/c/: 11129.c  readme.md
(+58 files in other folders)
